# premier-league-match-predictor

./: CLAUDE.md  GETTING_STARTED.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  ROADMAP.md  export_model_to_onnx.py  premier-league-predictor.ipynb
Data/prem23_24/: matches_23_24.csv  pl_table_2023_24.csv
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
backend/migrations/: 001_initial_schema.sql
backend/models/: .gitkeep
backend/src/: main.rs
backend/src/api/: matches.rs  mod.rs  predictions.rs  routes.rs  teams.rs
backend/src/db/: postgres.rs
backend/src/ml/: feature_engineering.rs  inference.rs  mod.rs
backend/src/models/: match_model.rs  mod.rs  prediction.rs  team.rs
backend/src/utils/: config.rs
