[package]
name = "premier-league-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# HTTP client for external APIs
reqwest = { version = "0.11", features = ["json"] }

# ML inference
ort = "2.0.0-rc.2"  # ONNX Runtime
ndarray = "0.15"

# Environment variables
dotenvy = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Authentication
jsonwebtoken = "9.2"
bcrypt = "0.15"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Configuration
config = "0.13"

[dev-dependencies]
# Testing
tokio-test = "0.4"
mockito = "1.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
